# beeper-automations

./: Cargo.toml  README.md  README_WINDOWS_SERVICE.md
.github/workflows/: release.yml
scripts/: install.ps1  install.sh
src/: app_state.rs  config.rs  lib.rs  logging.rs
src/notifications/: models.rs  service.rs
src/tui/: config_screen.rs  loading_screen.rs  main_screen.rs  mod.rs
src/tui/modules/: notification_screen.rs
